Bower 0.12-unreleased
=====================
This release requires Mercury version 14.04 or above.

* Create reply templates in bower instead of using notmuch reply output.
* The visibility of parts in the pager determines which parts are included
  in the reply, forward and edit-as-new message templates.
* Clean up spaces and unprintable chars when displaying header values.
* Fix display of future timestamps.
* Handle screen resize in a few more places.
* Hide tags starting with "." (Niklas Haas)
* Change default cursor color.
* Add make clean target.

Bower 0.11 (2019-08-17)
=======================

* Add '|' key to pipe thread or message IDs to external command.
* index: Add 'z' key to toggle authors column. (Will Dietz)
* thread/pager: Show messages with exclude tags if the tags are explicitly
  searched for in the index view.
* compose: Allow non-UTF-8 "text" files to be attached.
* config: Add ui.wrap_width option to wrap message lines before terminal width.
* config: Add color.index.total option. (Will Dietz)
* Install signal handlers to improve behaviour with suspending and exiting.
* Write pgp-signature parts with name="signature.asc"
* Minor improvements.

Bower 0.10 (2019-01-26)
=======================

* thread/pager: Add 'W' key to forward message.
* Support BOWER_CONFIG environment variable.
* Document support for XDG Base Directory Specification.
* Support tab expansion for query:.
* Support ~NAME as a shorthand for query:NAME.
* Support Shift-Tab to cycle through completions in reverse.
* Make path completion work more smoothly.
* Minor improvements.

Bower 0.9 (2018-10-07)
======================

* Support conversion of message parts to text using external filters.
* Add ',' key to go to next unread thread/message (synonym for Tab).
* thread/pager: Show pager progress as percentage of current message.
* thread/pager: Periodically poll for new messages.
* config: Replace index.poll_period_secs with ui.poll_period_secs.

Bower 0.8.1 (2018-04-01)