@@ -40,6 +40,7 @@
 :- import_module string.
 
 :- import_module call_system.
+:- import_module process.
 
 :- type notmuch_config == list(string).     % section.item=value
 
@@ -52,7 +53,7 @@ empty_notmuch_config = [].
 get_notmuch_config(Notmuch, Res, !IO) :-
     make_quoted_command(Notmuch, ["config", "list"],
         redirect_input("/dev/null"), no_redirect, Command),
-    call_system_capture_stdout(Command, no, CallRes, !IO),
+    call_system_capture_stdout(Command, environ([]), no, CallRes, !IO),
     (
         CallRes = ok(ItemsString),
         % The empty string following the final newline is not an item.
