@@ -5,6 +5,7 @@ This release requires Mercury version 14.04 or above.
 * Create reply templates in bower instead of using notmuch reply output.
 * The visibility of parts in the pager determines which parts are included
   in the reply, forward and edit-as-new message templates.
+* Pass PART_CONTENT_TYPE and PART_CHARSET environment variables to filters.
 * Clean up spaces and unprintable chars when displaying header values.
 * Fix display of future timestamps.
 * Handle screen resize in a few more places.
